--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bodyContainer">
     <div class="container">
@@ -17,13 +18,13 @@
         <!--card 1 starts-->
           <div class="card_conatiner">
             <a href="#" class="card_img_container">
-                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                <img src="https://source.unsplash.com/random/600400?technology" alt="card 1 image"
                 class="card_image"
                 loading="lazy">
             </a>
 
             <div class="card_title_container">
-                <a href="#" >
+                <a href="#" class="card_title_anchor" >
                     <h2 class="card_title">New Gadets Released</h2>
                     <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
                 </a>
@@ -39,10 +40,305 @@
                     </div>
 
                     <div class="author_info_conatiner">
-                        <span>
+                        <span class="aname">
                            John Doe
                         </span>
-                        <span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
+                          Feb 4, 2025
+                        </span>
+                    </div>
+                </div>
+
+                <div class="card_tag_container">
+                    <span>Technology</span>
+                </div>
+            </div>
+        </div>
+
+        <!--card 1 ends-->
+
+         <!--card 1 starts-->
+         <div class="card_conatiner">
+            <a href="#" class="card_img_container">
+                <img src="https://source.unsplash.com/random/600×400?healthy" alt="card 1 image"
+                class="card_image"
+                loading="lazy">
+            </a>
+
+            <div class="card_title_container">
+                <a href="#" class="card_title_anchor" >
+                    <h2 class="card_title">New Gadets Released</h2>
+                    <p class="card_des">Check out the lastest tech gadgets hitting the market, from smart phones to smart watches </p>
+                </a>
+            </div>
+
+            <div class="card_footer_container">
+                <div class="auther_container">
+                    <div class="auther_avtar_conatiner">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" 
+                        loading="lazy"
+                        class="author_avtar"
+                        alt="avtar1">
+                    </div>
+
+                    <div class="author_info_conatiner">
+                        <span class="aname">
+                           John Doe
+                        </span>
+                        <span class="adate">
                           Feb 4, 2025
                         </span>
                     </div>
